# dspy-inspector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: integration.yaml  publication.yaml
dspy_inspector/: __init__.py  inspector.py  inspector_test.py  styles.css  styles.css.map  styles.scss  test_main.py
examples/: multi_hop_rag.ipynb  subprogram.ipynb
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/061c38e94fbdbd5428c4cad492dd5b50/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/14f20d94a919263eb1a355217fe4caee/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/167f76884fd1b31e708635467af6562c/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/176ce00ab66db26e47ed873dbdeeb34c/: metadata.json  output.pkl
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/1b83a889cdb8733d366684d408f22e89/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/24733ff0d9d0ff8a4d38a56f3d4ecfa5/: metadata.json  output.pkl
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/26ce8bd988b42b89d7ba2959fcd5b05d/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/27eb9c9379e52d69ae49a0ed494947d5/: metadata.json  output.pkl
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/28e4e93db34375f437f93620675d7c57/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/2f5dbc93eb7e6a2977623720a4c3bedd/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/3a12c067f342a74e1f3c81d6ef080529/: metadata.json  output.pkl
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/3b417d95c2fa9cb89ea2cd909948eb55/: metadata.json  output.pkl
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/3de2eff7774f913ff77a30ba4ca9ed0c/: metadata.json  output.pkl
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/3ed936c14ac13f739141b4552b2438a5/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/41618a2988ce467fa441c88a1ddffc6e/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/4295e7ef2e7423d201aaa49faed6228e/: metadata.json
examples/cache/notebook/joblib/dsp/modules/colbertv2/colbertv2_get_request_v2_wrapped/49160d8accfb20cfdc5f3affe32a7427/: metadata.json  (+1 more)
examples/cache/notebook/joblib/dsp/modules/gpt3/v1_cached_gpt3_request_v2_wrapped/: func_code.py
scripts/: __init__.py  envs.py  tags.py  tasks.py  tools.py
(+166 files in other folders)
